# cp2077-wheel-mod-moza

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  NEXUS_BBCODE.txt  NEXUS_BRIDGE_BBCODE.txt  NEXUS_README.md  NEXUS_UPLOAD.md  README.md  build.ps1  copy_to_game.bat  deploy.ps1  mod_info.json  releases.html  test.ps1
.claude/: settings.local.json
.claude/skills/: build.md
cet/direct_wheel_steering/: init.lua
direct_wheel/: CMakeLists.txt
direct_wheel/include/: direct_wheel_abi.h
direct_wheel/src/: audio_monitor.cpp  audio_monitor.h  config.cpp  config.h  debug_steer.h  device_table.cpp  device_table.h  dllmain.cpp  input_bindings.cpp  input_bindings.h  kbd_hook.cpp  kbd_hook.h  led.cpp  led.h  logging.cpp  logging.h  mod_settings_seed.cpp  mod_settings_seed.h  plugin.cpp  plugin.h  rtti.cpp  rtti.h  rtti_dump.cpp  rtti_dump.h  rtti_offsets.cpp  rtti_offsets.h  sources.cpp  sources.h  vehicle_hook.cpp  vehicle_hook.h  vehicle_physics_ext.h  wheel.cpp  wheel.h
direct_wheel_reds/: direct_wheel_events.reds  direct_wheel_flight_bridge.reds  direct_wheel_menu.reds  direct_wheel_natives.reds  direct_wheel_settings.reds  direct_wheel_surface.reds
extras/cet_debug_overlay/direct_wheel_debug/: init.lua
fomod/: ModuleConfig.xml  info.xml
staging/: CHANGELOG.md  README.md
staging/direct_wheel_reds/: direct_wheel_natives.reds  direct_wheel_settings.reds
staging/fomod/: ModuleConfig.xml  info.xml
staging/fomod_configs/: config_handshake_off.json  config_handshake_on.json
staging/r6/scripts/direct_wheel/: direct_wheel_flight_bridge.reds  direct_wheel_mount.reds  direct_wheel_natives.reds  direct_wheel_settings.reds  direct_wheel_vehicle_signals.reds
steering_debug/: init.lua  init_log.lua  vehicle_scan.txt
tools/ffb_probe/: CMakeLists.txt  ffb_probe.cpp
tools/input_probe/: CMakeLists.txt  input_probe.cpp
tools/wheel_reset/: CMakeLists.txt  wheel_reset.cpp
